feat(setup): Initial project commit with full Expo/TypeScript architecture and core features (Auth, Navigation, i18n, Testing structure)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,27 @@ yarn-error.*
 # generated native folders
 /ios
 /android
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+*.log
+.expo/
+# For Android
+/android/
+# For iOS
+/ios/
+*.iml
+
+# Expo managed
+app.json
+# expo caches
+.expo-shared/
