--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task-manager-expo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.27.1",
+    "@expo/metro-runtime": "~3.1.3",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -23,9 +24,11 @@
     "formik": "^2.4.5",
     "i18n-js": "^4.4.3",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6",
     "typescript": "^5.3.0",
     "yup": "^1.4.0"
   },
